Registration Functions completed

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -200,8 +200,8 @@
       <li><a href="#">Home</a></li>
       <li><a href="NavBar-Pages/about.html">About</a></li>
       <li><a href="NavBar-Pages/courses.html">Courses</a></li>
-      <li><a href="NavBar-Pages/admission.html">Admissions</a></li>
       <li><a href="NavBar-Pages/contact.html">Contact</a></li>
+      <li><a href="Pages/register.jsp">Admission</a></li>
       <li><a href="Pages/student_login.jsp" class="login-btn">Login</a></li>
     </ul>
   </nav>
