attendance feature complete

--- a/bin/src/main/webapp/index.html
+++ b/bin/src/main/webapp/index.html
@@ -198,7 +198,7 @@
   <nav>
     <ul>
       <li><a href="#">Home</a></li>
-      <li><a href="Pages/courseForm.jsp">About</a></li>
+      <li><a href="NavBar-Pages/about.html">About</a></li>
       <li><a href="NavBar-Pages/courses.html">Courses</a></li>
       <li><a href="NavBar-Pages/contact.html">Contact</a></li>
       <li><a href="Pages/register.jsp">Admission</a></li>
